# pictureascii

./: .gitignore  LICENSE.md  README.md  pyproject.toml
example/images/: sample.txt
i18n/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md
src/pictureascii/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
